# ralph

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  dashboard.orch.json  install.sh
docs/: AGENT-WORKFLOW.md  ENVIRONMENT.md  (+8 more)
ralph-dashboard/: .coverage  README.md  angular.json  jest.config.ts  package-lock.json  package.json  pyproject.toml  server.py  test-debug.ts  throw-error.config.ts  tsconfig.app.json  tsconfig.spec.json  vitest.config.ts
ralph-dashboard/ralph_dashboard/: __init__.py  cli.py  handler.py  paths.py
ralph-dashboard/ralph_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ralph-dashboard/scripts/: angular-launch-server-stub.cjs  start-server.cjs
ralph-dashboard/src/: angular-test-env.ts  index.html  paths.ts  server.ts  setup.angular.ts  setup.ts  styles.scss  test-ionic-import.spec.ts  test-ionic-proxies.spec.ts  vitest-test-env.ts
ralph-dashboard/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  app.spec.ts  app.ssr.spec.ts  test.routes.ts
ralph-dashboard/src/server/: dashboard-api.ts
ralph-dashboard/static/: app.js  index.html  styles.css
ralph-dashboard/tests/: api.test.ts  dashboard-api-hidden-files.test.ts  dashboard-api-metrics.test.ts  dashboard-api-symlink.test.ts  format-elapsed.test.ts  markdown-sanitizer.spec.ts  markdown-to-html.test.ts  paths-plans-root.test.ts  paths-project-root.test.ts  paths-workspace-root.test.ts  paths.test.ts  server-fallback.test.ts  test_cli.py  test_handler.py  test_paths.py  test_placeholder.py
(+293 files in other folders)
