[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-dashboard"
version = "0.1.0"
description = "Local UI for Ralph plans, artifacts, and logs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "pytest-cov>=4.1,<5",
]

[tool.pytest.ini_options]
addopts = "--cov=ralph_dashboard --cov-report=term-missing --cov-report=html --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ralph_dashboard"]
omit = ["ralph_dashboard/__main__.py"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]
